<resources>
    <string name="app_name">calculadora matrices</string>
    <string name="nav_header_title">Calculadora de matrices</string>
    <string name="nav_header_subtitle">Texto de abajo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_suma">Suma</string>
    <string name="menu_resta">Resta</string>
    <string name="menu_multiplicacion">Multiplicacion por coeficiente</string>
    <string name="menu_multiplicacion_mat">Multiplicacion de matrices</string>
    <string name="menu_determinante">Determinante</string>
    <string name="menu_adjunta">Matriz adjunta</string>
    <string name="menu_transpuesta">Matriz transpuesta</string>
    <string name="menu_inversa">Matriz inversa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="numeros">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

</resources>